@@ -1,10 +1,12 @@
 package com.ce.template.advice;
 
 import com.ce.template.advice.exception.ApiErrors;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
+import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -14,7 +16,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
+@Slf4j
 @RestControllerAdvice
 public class ApplicationControllerAdvice {
 
@@ -24,8 +26,9 @@ public class ApplicationControllerAdvice {
         BindingResult bindingResult = ex.getBindingResult();
         List<String> messages = bindingResult.getAllErrors()
                 .stream()
-                .map(objectError -> objectError.getDefaultMessage())
-                .collect(Collectors.toList());
+                .map(ObjectError::getDefaultMessage)
+                .toList();
+        log.error("Erro de validação", ex);
         return new ApiErrors(messages);
     }
 
@@ -34,6 +37,15 @@ public class ApplicationControllerAdvice {
         String message = ex.getReason();
         HttpStatusCode codigoStatus = ex.getStatusCode();
         ApiErrors apiErrors= new ApiErrors(message);
+        log.error("Erro de validação", ex);
         return new ResponseEntity(apiErrors, codigoStatus);
     }
+
+    @ExceptionHandler(Exception.class)
+    @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
+    public ApiErrors handleUnexpectedException(Exception ex) {
+        log.error("Erro de validação", ex);
+        return new ApiErrors("Ocorreu um erro inesperado: " + ex.getMessage());
+    }
+
 }
